feat: openapi, use userid instead of ownerid, create member when creating server
